add sequelize user model and  /change-pwd route
